--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Status</title>
-    <link rel="stylesheet" href="styles/dist/profile.css">
+    <link rel="stylesheet" href="styles/profile.css">
 </head>
-
 <body>
     <main class="bodymain">
         <nav id="mobilenav">
