tabs and user details page

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <title>Status</title>
     <link rel="stylesheet" href="styles/profile.css">
 </head>
+
 <body>
     <main class="bodymain">
         <nav id="mobilenav">
@@ -63,9 +64,9 @@
                 <img class="gitlogo" src="assets/imgs/svg/githublogo.svg" alt="Click to go Home">
                 <input class="search" placeholder="Search" type="text">
                 <a class="navlink" href="/"> Pull requests</a>
-                <a  class="navlink" href="/"> Issues</a>
-                <a  class="navlink" href="/">MarketPlace</a>
-                <a  class="navlink" href="/"> Explore</a>
+                <a class="navlink" href="/"> Issues</a>
+                <a class="navlink" href="/">MarketPlace</a>
+                <a class="navlink" href="/"> Explore</a>
             </div>
 
             <div class="header-right">
@@ -74,18 +75,74 @@
                     <p class="noti"></p>
                 </div>
 
-                <div  class="icondivv">
+                <div class="icondivv">
                     <img class="plusarrow" src="assets/imgs/svg/pluss.png" alt="">
-                    <img  class="downarrow" src="assets/imgs/svg/downarrow.png" alt="">
+                    <img class="downarrow" src="assets/imgs/svg/downarrow.png" alt="">
                 </div>
 
-                <div  class="icondivv">
+                <div class="icondivv">
                     <img class="userimage" src="https://avatars2.githubusercontent.com/u/26200212?s=460&v=4" alt="">
                     <img class="downarrow" src="assets/imgs/svg/downarrow.png" alt="">
                 </div>
 
             </div>
         </nav>
+        <section class="datasect">
+            <section id="mobilename">
+                <div class="userdetails">
+                    <div class="userdp">
+                        <img class="avatar" src="https://avatars1.githubusercontent.com/u/26200212?s=40&amp;v=4"
+                            alt="@onaty">
+                    </div>
+                    <div class="username">
+                        <h2 class="name">Oluwatobi Onasanya </h2>
+                        <p class="usernick">onaty</p>
+                    </div>
+                </div>
+                <p class="status">I enjoy solving problems</p>
+            </section>
+            <div class="tabsdiv">
+                <div class="fillup">
+                    <p></p>
+                </div>
+                <aside class="tabsicon">
+                    <div class="tab">
+                        <img class="tabicon" src="assets/imgs/svg/book.svg" alt="">
+                        <p class="tabtitle">Overview</p>
+                    </div>
+                    <div class="tab selected">
+                        <img class="tabicon" src="assets/imgs/svg/book2.svg" alt="">
+                        <p class="tabtitle">Repositories <span>100</span></p>
+                    </div>
+                    <div class="tab">
+                        <img class="tabicon" src="assets/imgs/svg/statistics.svg" alt="">
+                        <p class="tabtitle">Projects</p>
+                    </div>
+                    <div class="tab">
+                        <img class="tabicon" src="assets/imgs/svg/box.svg" alt="">
+                        <p class="tabtitle">Packages</p>
+                    </div>
+                </aside>
+            </div>
+            <section class="reposect">
+                <div class="profiledata">
+                    <div class="userdetails">
+                        <div class="userdp">
+                            <img class="avatar" src="https://avatars1.githubusercontent.com/u/26200212?s=40&amp;v=4"
+                                alt="@onaty">
+                        </div>
+                        <div class="username">
+                            <h2 class="name">Oluwatobi Onasanya </h2>
+                            <p class="usernick">onaty</p>
+                        </div>
+                    </div>
+                    <p class="status">I enjoy solving problems</p>
+                </div>
+                <section class="repositry"  >
+
+                </section>
+            </section>
+        </section>
     </main>
 </body>
 <script src="assets/js/index.js"></script>
