search input and results

--- a/public/index.html
+++ b/public/index.html
@@ -102,27 +102,29 @@
                 <p class="status">I enjoy solving problems</p>
             </section>
             <div class="tabsdiv">
-                <div class="fillup">
-                    <p></p>
+                <div class="firstinner">
+                    <div class="fillup">
+                        <p></p>
+                    </div>
+                    <aside class="tabsicon">
+                        <div class="tab">
+                            <img class="tabicon" src="assets/imgs/svg/book.svg" alt="">
+                            <p class="tabtitle">Overview</p>
+                        </div>
+                        <div class="tab selected">
+                            <img class="tabicon" src="assets/imgs/svg/book2.svg" alt="">
+                            <p class="tabtitle">Repositories <span>100</span></p>
+                        </div>
+                        <div class="tab">
+                            <img class="tabicon" src="assets/imgs/svg/statistics.svg" alt="">
+                            <p class="tabtitle">Projects</p>
+                        </div>
+                        <div class="tab">
+                            <img class="tabicon" src="assets/imgs/svg/box.svg" alt="">
+                            <p class="tabtitle">Packages</p>
+                        </div>
+                    </aside>
                 </div>
-                <aside class="tabsicon">
-                    <div class="tab">
-                        <img class="tabicon" src="assets/imgs/svg/book.svg" alt="">
-                        <p class="tabtitle">Overview</p>
-                    </div>
-                    <div class="tab selected">
-                        <img class="tabicon" src="assets/imgs/svg/book2.svg" alt="">
-                        <p class="tabtitle">Repositories <span>100</span></p>
-                    </div>
-                    <div class="tab">
-                        <img class="tabicon" src="assets/imgs/svg/statistics.svg" alt="">
-                        <p class="tabtitle">Projects</p>
-                    </div>
-                    <div class="tab">
-                        <img class="tabicon" src="assets/imgs/svg/box.svg" alt="">
-                        <p class="tabtitle">Packages</p>
-                    </div>
-                </aside>
             </div>
             <section class="reposect">
                 <div class="profiledata">
@@ -138,8 +140,15 @@
                     </div>
                     <p class="status">I enjoy solving problems</p>
                 </div>
-                <section class="repositry"  >
-
+                <section class="repositry">
+                    <div class="inputdiv">
+                        <div class="findrepo">
+                            <input class="search" type="text" placeholder="Find a repository...">
+                        </div>
+                        <div class="resultsnumber">
+                            <p><strong>123</strong> results for <strong>public</strong> repositories</p>
+                        </div>
+                    </div>
                 </section>
             </section>
         </section>
