--- a/public/index.html
+++ b/public/index.html
@@ -149,6 +149,112 @@
                             <p><strong>123</strong> results for <strong>public</strong> repositories</p>
                         </div>
                     </div>
+                    <div class="repolist">
+                        <div class="repo">
+                            <div class="details">
+                                <div class="name">
+                                    <h3><a href="/">lbsl-frontened
+                                        </a></h3>
+                                </div>
+                                <div class="description">
+                                    <p class="" itemprop="description">
+                                        <g-emoji class="g-emoji" alias="notebook_with_decorative_cover"
+                                            fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/1f4d4.png">
+                                            📔</g-emoji>
+                                        <g-emoji class="g-emoji" alias="books"
+                                            fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/1f4da.png">
+                                            📚</g-emoji> A curated list of awesome resources : books, videos, articles
+                                        about using Next.js (A minimalistic framework for universal server-rendered
+                                        React applications)
+                                    </p>
+                                </div>
+                                <div class="repodatas">
+                                    <span class="reponame"> <span class="repo-color--php colorss"></span> PHP</span>
+                                    <a class="detss"><img src="assets/imgs/svg/star.svg" alt=""> <span>198</span></a>
+                                    <a class="detss"><img src="assets/imgs/svg/star.svg" alt=""> <span>35</span></a>
+                                    <span class="detss"><img src="assets/imgs/svg/star.svg" alt=""> <span>MIT
+                                            Licence</span></span>
+                                    <span class="detss lastupdate">Updated on 9 Sep 2019</span>
+                                </div>
+                            </div>
+                            <div class="buttons">
+                                <button class="starbutton">
+                                    <img src="assets/imgs/svg/star.svg" alt="">
+                                    <span> Star</span>
+                                </button>
+                            </div>
+                        </div>
+
+                        <div class="repo">
+                            <div class="details">
+                                <div class="name">
+                                    <h3><a href="/">lbsl-frontened
+                                        </a></h3>
+                                </div>
+                                <div class="description">
+                                    <p class="" itemprop="description">
+                                        <g-emoji class="g-emoji" alias="notebook_with_decorative_cover"
+                                            fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/1f4d4.png">
+                                            📔</g-emoji>
+                                        <g-emoji class="g-emoji" alias="books"
+                                            fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/1f4da.png">
+                                            📚</g-emoji> A curated list of awesome resources : books, videos, articles
+                                        about using Next.js (A minimalistic framework for universal server-rendered
+                                        React applications)
+                                    </p>
+                                </div>
+                                <div class="repodatas">
+                                    <span class="reponame"> <span class="repo-color--php colorss"></span> PHP</span>
+                                    <a class="detss"><img src="assets/imgs/svg/star.svg" alt=""> <span>198</span></a>
+                                    <a class="detss"><img src="assets/imgs/svg/star.svg" alt=""> <span>35</span></a>
+                                    <span class="detss"><img src="assets/imgs/svg/star.svg" alt=""> <span>MIT
+                                            Licence</span></span>
+                                    <span class="detss lastupdate">Updated on 9 Sep 2019</span>
+                                </div>
+                            </div>
+                            <div class="buttons">
+                                <button class="starbutton">
+                                    <img src="assets/imgs/svg/star.svg" alt="">
+                                    <span> Star</span>
+                                </button>
+                            </div>
+                        </div>
+
+                        <div class="repo">
+                            <div class="details">
+                                <div class="name">
+                                    <h3><a href="/">lbsl-frontened
+                                        </a></h3>
+                                </div>
+                                <div class="description">
+                                    <p class="" itemprop="description">
+                                        <g-emoji class="g-emoji" alias="notebook_with_decorative_cover"
+                                            fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/1f4d4.png">
+                                            📔</g-emoji>
+                                        <g-emoji class="g-emoji" alias="books"
+                                            fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/1f4da.png">
+                                            📚</g-emoji> A curated list of awesome resources : books, videos, articles
+                                        about using Next.js (A minimalistic framework for universal server-rendered
+                                        React applications)
+                                    </p>
+                                </div>
+                                <div class="repodatas">
+                                    <span class="reponame"> <span class="repo-color--php colorss"></span> PHP</span>
+                                    <a class="detss"><img src="assets/imgs/svg/star.svg" alt=""> <span>198</span></a>
+                                    <a class="detss"><img src="assets/imgs/svg/star.svg" alt=""> <span>35</span></a>
+                                    <span class="detss"><img src="assets/imgs/svg/star.svg" alt=""> <span>MIT
+                                            Licence</span></span>
+                                    <span class="detss lastupdate">Updated on 9 Sep 2019</span>
+                                </div>
+                            </div>
+                            <div class="buttons">
+                                <button class="starbutton">
+                                    <img src="assets/imgs/svg/star.svg" alt="">
+                                    <span> Star</span>
+                                </button>
+                            </div>
+                        </div>
+                    </div>
                 </section>
             </section>
         </section>
