--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Status</title>
+    <link rel="icon" href="./assets/favicon.ico">
+    <meta name="description" content="Onaty Profile page github replica">
     <link rel="stylesheet" href="styles/profile.css">
 </head>
 
@@ -104,7 +106,13 @@
             <div class="tabsdiv">
                 <div class="firstinner">
                     <div class="fillup">
-                        <p></p>
+                        <div  id="shorten" class="shortenimg">
+                            <div class="avatar"> <img
+                                    src="https://avatars1.githubusercontent.com/u/26200212?s=40&amp;v=4"></div>
+                            <div class="name">
+                                <p>Onasanya Oluwatobi</p>
+                            </div>
+                        </div>
                     </div>
                     <aside class="tabsicon">
                         <div class="tab">
@@ -127,13 +135,14 @@
                 </div>
             </div>
             <section class="reposect">
-                <div class="profiledata">
+                <div  class="profiledata">
                     <div class="userdetails">
                         <div class="userdp">
-                            <img class="avatar" src="https://avatars1.githubusercontent.com/u/26200212?s=40&amp;v=4"
+                            <img id="fullimage" class="avatar" src="https://avatars1.githubusercontent.com/u/26200212?s=40&amp;v=4"
                                 alt="@onaty">
+                            <p id="profilediv" style="margin: 0px;"></p>
                         </div>
-                        <div class="username">
+                        <div id="usernamediv" class="username">
                             <h2 class="name">Oluwatobi Onasanya </h2>
                             <p class="usernick">onaty</p>
                         </div>
@@ -150,6 +159,146 @@
                         </div>
                     </div>
                     <div class="repolist">
+                        <div class="repo">
+                            <div class="details">
+                                <div class="name">
+                                    <h3><a href="/">lbsl-frontened
+                                        </a></h3>
+                                </div>
+                                <div class="description">
+                                    <p class="" itemprop="description">
+                                        <g-emoji class="g-emoji" alias="notebook_with_decorative_cover"
+                                            fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/1f4d4.png">
+                                            📔</g-emoji>
+                                        <g-emoji class="g-emoji" alias="books"
+                                            fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/1f4da.png">
+                                            📚</g-emoji> A curated list of awesome resources : books, videos, articles
+                                        about using Next.js (A minimalistic framework for universal server-rendered
+                                        React applications)
+                                    </p>
+                                </div>
+                                <div class="repodatas">
+                                    <span class="reponame"> <span class="repo-color--php colorss"></span> PHP</span>
+                                    <a class="detss"><img src="assets/imgs/svg/star.svg" alt=""> <span>198</span></a>
+                                    <a class="detss"><img src="assets/imgs/svg/star.svg" alt=""> <span>35</span></a>
+                                    <span class="detss"><img src="assets/imgs/svg/star.svg" alt=""> <span>MIT
+                                            Licence</span></span>
+                                    <span class="detss lastupdate">Updated on 9 Sep 2019</span>
+                                </div>
+                            </div>
+                            <div class="buttons">
+                                <button class="starbutton">
+                                    <img src="assets/imgs/svg/star.svg" alt="">
+                                    <span> Star</span>
+                                </button>
+                            </div>
+                        </div>
+
+                        <div class="repo">
+                            <div class="details">
+                                <div class="name">
+                                    <h3><a href="/">lbsl-frontened
+                                        </a></h3>
+                                </div>
+                                <div class="description">
+                                    <p class="" itemprop="description">
+                                        <g-emoji class="g-emoji" alias="notebook_with_decorative_cover"
+                                            fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/1f4d4.png">
+                                            📔</g-emoji>
+                                        <g-emoji class="g-emoji" alias="books"
+                                            fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/1f4da.png">
+                                            📚</g-emoji> A curated list of awesome resources : books, videos, articles
+                                        about using Next.js (A minimalistic framework for universal server-rendered
+                                        React applications)
+                                    </p>
+                                </div>
+                                <div class="repodatas">
+                                    <span class="reponame"> <span class="repo-color--php colorss"></span> PHP</span>
+                                    <a class="detss"><img src="assets/imgs/svg/star.svg" alt=""> <span>198</span></a>
+                                    <a class="detss"><img src="assets/imgs/svg/star.svg" alt=""> <span>35</span></a>
+                                    <span class="detss"><img src="assets/imgs/svg/star.svg" alt=""> <span>MIT
+                                            Licence</span></span>
+                                    <span class="detss lastupdate">Updated on 9 Sep 2019</span>
+                                </div>
+                            </div>
+                            <div class="buttons">
+                                <button class="starbutton">
+                                    <img src="assets/imgs/svg/star.svg" alt="">
+                                    <span> Star</span>
+                                </button>
+                            </div>
+                        </div>
+
+                        <div class="repo">
+                            <div class="details">
+                                <div class="name">
+                                    <h3><a href="/">lbsl-frontened
+                                        </a></h3>
+                                </div>
+                                <div class="description">
+                                    <p class="" itemprop="description">
+                                        <g-emoji class="g-emoji" alias="notebook_with_decorative_cover"
+                                            fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/1f4d4.png">
+                                            📔</g-emoji>
+                                        <g-emoji class="g-emoji" alias="books"
+                                            fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/1f4da.png">
+                                            📚</g-emoji> A curated list of awesome resources : books, videos, articles
+                                        about using Next.js (A minimalistic framework for universal server-rendered
+                                        React applications)
+                                    </p>
+                                </div>
+                                <div class="repodatas">
+                                    <span class="reponame"> <span class="repo-color--php colorss"></span> PHP</span>
+                                    <a class="detss"><img src="assets/imgs/svg/star.svg" alt=""> <span>198</span></a>
+                                    <a class="detss"><img src="assets/imgs/svg/star.svg" alt=""> <span>35</span></a>
+                                    <span class="detss"><img src="assets/imgs/svg/star.svg" alt=""> <span>MIT
+                                            Licence</span></span>
+                                    <span class="detss lastupdate">Updated on 9 Sep 2019</span>
+                                </div>
+                            </div>
+                            <div class="buttons">
+                                <button class="starbutton">
+                                    <img src="assets/imgs/svg/star.svg" alt="">
+                                    <span> Star</span>
+                                </button>
+                            </div>
+                        </div>
+
+                        <div class="repo">
+                            <div class="details">
+                                <div class="name">
+                                    <h3><a href="/">lbsl-frontened
+                                        </a></h3>
+                                </div>
+                                <div class="description">
+                                    <p class="" itemprop="description">
+                                        <g-emoji class="g-emoji" alias="notebook_with_decorative_cover"
+                                            fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/1f4d4.png">
+                                            📔</g-emoji>
+                                        <g-emoji class="g-emoji" alias="books"
+                                            fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/1f4da.png">
+                                            📚</g-emoji> A curated list of awesome resources : books, videos, articles
+                                        about using Next.js (A minimalistic framework for universal server-rendered
+                                        React applications)
+                                    </p>
+                                </div>
+                                <div class="repodatas">
+                                    <span class="reponame"> <span class="repo-color--php colorss"></span> PHP</span>
+                                    <a class="detss"><img src="assets/imgs/svg/star.svg" alt=""> <span>198</span></a>
+                                    <a class="detss"><img src="assets/imgs/svg/star.svg" alt=""> <span>35</span></a>
+                                    <span class="detss"><img src="assets/imgs/svg/star.svg" alt=""> <span>MIT
+                                            Licence</span></span>
+                                    <span class="detss lastupdate">Updated on 9 Sep 2019</span>
+                                </div>
+                            </div>
+                            <div class="buttons">
+                                <button class="starbutton">
+                                    <img src="assets/imgs/svg/star.svg" alt="">
+                                    <span> Star</span>
+                                </button>
+                            </div>
+                        </div>
+
                         <div class="repo">
                             <div class="details">
                                 <div class="name">
