--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Status</title>
-    <link rel="icon" href="./assets/favicon.ico">
+    <link rel="icon" href="./assets/imgs/favicon.ico">
     <meta name="description" content="Onaty Profile page github replica">
+    <meta name="author" content="Onasanya Oluwatobi">
     <link rel="stylesheet" href="styles/profile.css">
 </head>
 
