--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Status</title>
+    <title>Onaty(Onasanya Oluwatobi)</title>
     <link rel="icon" href="./assets/imgs/favicon.ico">
     <meta name="description" content="Onaty Profile page github replica">
     <meta name="author" content="Onasanya Oluwatobi">
