Fix scrolling bug

--- a/public/index.html
+++ b/public/index.html
@@ -173,7 +173,10 @@
             </div>
             <section class="reposect">
                 <div id="webuserprofile" class="profiledata">
-                    <div class="imgloader loading"></div>
+                    <div class="imgloader loading">
+                       <div id="fullimage"></div>
+                        <p id="profilediv"></p>
+                    </div>
                 </div>
                 <section class="repositry">
                     <div class="inputdiv">
